--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         font-family: 'Fira+Code', 'Consolas', 'Microsoft YaHei', monospace;
       }
       ::-webkit-scrollbar {
-        width: 8px;
-        height: 8px;
+        width: 0.2rem;
+        height: 0.2rem;
       }
       ::-webkit-scrollbar-track {
         background: transparent;
