fix:设置存文件

--- a/index.html
+++ b/index.html
@@ -10,9 +10,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Fira+Code:wght@400;500&display=swap" rel="stylesheet">
     <style>
-      /* 强制背景色为深色，与 main.js 中的 backgroundColor 保持一致，彻底消除白屏闪烁 */
+      /* 设置基础字体和溢出控制 */
       body { 
-        background-color: #09090b !important;
         font-family: 'Inter', 'Microsoft YaHei', 'PingFang SC', sans-serif;
         overflow: hidden;
       }
