--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>开发者笔记 Pro - DevNote Pro</title>
+    <title>DevNote Pro</title>
     <!-- 样式会由 Vite 自动注入，这里只需保留基础 CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
